--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,136 @@
 <!-- <app -->
 
 <!-- <router-outlet></router-outlet> -->
-<section>
-  <button mat-button>Basic</button>
-  <button mat-button color="primary">Primary</button>
-  <button mat-button color="accent">Accent</button>
-  <button mat-button color="warn">Warn</button>
-  <button mat-button disabled>Disabled</button>
-</section>
-<div class="container">
-  hiii
-</div>
+<div style="background-color: #e4e5e6;">
+  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; border-bottom: 1px solid black;">
+    <div class="displayonsm">
+      <button mat-button (click)="drawer.toggle()">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div class="displayonsm">
+      <a class="navbar-brand"  href="#">brand icon</a>
+    </div>
+    <div class="displayonlg">
+      <a class="navbar-brand " style="display:inline-block; padding-right: 25px;" href="#">brand icon</a>
+      <button  mat-button (click)="drawer.toggle()">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <ul class="navbar-nav displayonlg" style="padding-left:25px; display: inline-block;">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Dashboard<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">User</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Settings</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="navbar-nav" style="display: inline-block;">
+        <li class="nav-item displayonlg">
+          <a class="nav-link" href="#">icon1<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item displayonlg">
+          <a class="nav-link" href="#">icon2</a>
+        </li>
+        <li class="nav-item displayonlg">
+          <a class="nav-link" href="#">icon3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="" alt="profile" style="width:100px;height:100px;border-radius: 20px;"></a>
+          <div class="dropdown-menu dropdown-menu-right" style="min-width: 250px;">
+            <a href="#" class="dropdown-item">
+              <div style="text-align: center;">Account</div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon1 Updates</div>
+              <div>42</div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon2 messages</div>
+              <div>42</div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon3 Tasks</div>
+              <div>42</div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon4 Comment</div>
+              <div>42</div>
+            </a>
+            <a href="#" class="dropdown-item">
+              <div style="text-align: center;">Settings</div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon5 profile</div>
+              <div></div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon6 setting</div>
+              <div></div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon7 payments</div>
+              <div></div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon8 projects</div>
+              <div></div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>icon9 lock account</div>
+              <div></div>
+            </a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
+              <div>logout</div>
+              <div></div>
+            </a>
+        </div>
+       
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  </div> 
+   
+   
+  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; justify-content: space-between;">
+    <div> <ol class="breadcrumb" style="background-color: white; margin-bottom: 0px;">
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item active"><a href="#">Dash board</a></li>
+  </ol></div>
+    <div class="secoundnavbarright">
+      <div>icon1 <span></span></div>
+      <div>icon2 <span>Dashboard icon</span></div>
+      <div>icon3 <span>setting icon</span></div>
+    </div>
+  </nav>
+ <mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>Auto-resizing sidenav</p>
+    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+   
+  </div>
+
+</mat-drawer-container>
