--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     <div>
       <ul class="navbar-nav" style="display: inline-block;">
         <li class="nav-item displayonlg">
-          <a class="nav-link" href="#">icon1<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item displayonlg">
           <a class="nav-link" href="#">icon2</a>
@@ -48,55 +48,64 @@
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon1 Updates</div>
+              <div><i class="fa fa-bell" aria-hidden="true"></i><span class="ml-3">Updates</span></div>
               <div>42</div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon2 messages</div>
+              <div><i class="fa fa-envelope-square" aria-hidden="true"></i>
+               <span class="ml-3">Messages</span></div>
               <div>42</div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon3 Tasks</div>
+              <div><i class="fa fa-tasks" aria-hidden="true"></i>
+                <span class="ml-3">Tasks</span></div>
               <div>42</div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon4 Comment</div>
+              <div><i class="fa fa-comments" aria-hidden="true"></i>
+                <span class="ml-3">Comments</span></div>
               <div>42</div>
             </a>
             <a href="#" class="dropdown-item">
-              <div style="text-align: center;">Settings</div>
+              <div style="text-align: center;" class="mt-2">Settings</div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon5 profile</div>
+              <div><i class="fa fa-user" aria-hidden="true"></i>
+                <span class="ml-3">Profile</span></div>
               <div></div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon6 setting</div>
+              <div><i class="fa fa-wrench" aria-hidden="true"></i>
+                <span class="ml-3">Settings</span></div>
               <div></div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon7 payments</div>
+              <div><i class="fa fa-credit-card-alt" aria-hidden="true"></i>
+               <span class="ml-3">Payments</span></div>
               <div></div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon8 projects</div>
+              <div><i class="fa fa-file" aria-hidden="true"></i>
+                <span class="ml-3">Projects</span></div>
               <div></div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>icon9 lock account</div>
+              <div><i class="fa fa-shield" aria-hidden="true"></i>
+                <span class="ml-3">Lock Account</span></div>
               <div></div>
             </a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
-              <div>logout</div>
+              <div><i class="fa fa-lock" aria-hidden="true"></i>
+              <span class="ml-3">Log Out</span></div>
               <div></div>
             </a>
         </div>
