--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app -->
 
 <!-- <router-outlet></router-outlet> -->
-<div style="background-color: #e4e5e6;">
+<div style="background-color: #e4e5e6; position:fixed; width:100%">
   <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; border-bottom: 1px solid black;">
     <div class="displayonsm">
       <button mat-button (click)="drawer.toggle()">
@@ -109,7 +109,7 @@
   </div> 
    
    
-  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; justify-content: space-between;">
+  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; justify-content: space-between; position: fixed; width: 100%; top:54px;">
     <div> <ol class="breadcrumb" style="background-color: white; margin-bottom: 0px;">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
       <li class="breadcrumb-item active"><a href="#">Dash board</a></li>
@@ -120,17 +120,17 @@
       <div>icon3 <span>setting icon</span></div>
     </div>
   </nav>
- <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+ <mat-drawer-container class="example-container" style="top:115px; z-index: -1;" autosize>
+  <mat-drawer #drawer style="background-color:#2f353a; width:200px; position: fixed;" class="example-sidenav"  [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
     <p>Auto-resizing sidenav</p>
     <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-    <button (click)="showFiller = !showFiller" mat-raised-button>
+    <button style="top:85%;" (click)="showFiller = !showFiller" mat-raised-button>
       Toggle extra text
     </button>
   </mat-drawer>
 
   <div class="example-sidenav-content">
-   
+    Lorem, ipsum dolor sit amet consectetur.Lorem, ipsum dolor sit amet consectetur.Lorem, ipsum dolor sit amet consectetur.
   </div>
 
 </mat-drawer-container>
