--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     <div>
       <ul class="navbar-nav" style="display: inline-block;">
         <li class="nav-item displayonlg">
-          <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">icon1<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item displayonlg">
           <a class="nav-link" href="#">icon2</a>
@@ -121,11 +121,12 @@
   <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; justify-content: space-between;">
     <div> <ol class="breadcrumb" style="background-color: white; margin-bottom: 0px;">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
-      <li class="breadcrumb-item active"><a href="#">Dash board</a></li>
+      <li class="breadcrumb-item active"><a href="#">Dashboard</a></li>
   </ol></div>
     <div class="secoundnavbarright">
       <div>icon1 <span></span></div>
-      <div>icon2 <span>Dashboard icon</span></div>
+      <div><i class="fa fa-line-chart" aria-hidden="true"></i>
+        <span>Dashboard icon</span></div>
       <div>icon3 <span>setting icon</span></div>
     </div>
   </nav>
