--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -130,7 +130,7 @@
     </div>
   </nav>
  <mat-drawer-container class="example-container" style="top:115px; z-index: -1;" autosize>
-  <mat-drawer #drawer style="background-color:#2f353a; width:200px; position: fixed;" class="example-sidenav"  [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+  <mat-drawer #drawer style="background-color:#2f353a; width:200px; position: fixed;" class="example-sidenav"  [mode]="mobileQuery.matches ? 'over' : 'side'" >
     <p>Auto-resizing sidenav</p>
     <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
     <button style="top:85%;" (click)="showFiller = !showFiller" mat-raised-button>
@@ -138,8 +138,105 @@
     </button>
   </mat-drawer>
 
-  <div class="example-sidenav-content">
-    Lorem, ipsum dolor sit amet consectetur.Lorem, ipsum dolor sit amet consectetur.Lorem, ipsum dolor sit amet consectetur.
-  </div>
+  <div class="example-sidenav-content container">
+     </div>
+     <table class="table table-hover" style="background-color: white; border: 1px soild #E4E7EA">
+      <thead style="background-color: #E4E7EA;">
+        <tr>
+          <th scope="col">Icon</th>
+          <th scope="col">User</th>
+          <th scope="col">Country</th>
+          <th scope="col">Usage</th>
+          <th scope="col">Payment method</th>
+          <th scope="col">Activity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="" alt="profile" class="tableimg"></td>
+          <td><div>Username</div>
+            <div>new|Registered</div>
+          </td>
+          <td><img src="" alt="flag" class="tableimg"></td>
+          <td>
+            <div style="display: flex; justify-content: space-between;">
+              <div><b>50%</b></div>
+              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+             
+            </div> 
+            <progressbar class="progressbar" [value]="50"></progressbar>
+       
+          </td>
+          <td><img src="" alt="pay img" class="tableimg"></td>
+          <td>
+            <div>Last login</div>
+            <div><b>10 Sec ago</b></div>
+          </td>
+        </tr>
+        <tr>
+          <td><img src="" alt="profile" class="tableimg"></td>
+          <td><div>Username</div>
+            <div>new|Registered</div>
+          </td>
+          <td><img src="" alt="flag" class="tableimg"></td>
+          <td>
+            <div style="display: flex; justify-content: space-between;">
+              <div><b>50%</b></div>
+              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+             
+            </div>  
+            <progressbar class="progressbar" [value]="50"></progressbar>
+       
+          </td>
+          <td><img src="" alt="pay img" class="tableimg"></td>
+          <td>
+            <div>Last login</div>
+            <div><b>10 Sec ago</b></div>
+          </td>
+        </tr>
+        <tr>
+          <td><img src="" alt="profile" class="tableimg"></td>
+          <td><div>Username</div>
+            <div>new|Registered</div>
+          </td>
+          <td><img src="" alt="flag" class="tableimg"></td>
+          <td>
+            <div style="display: flex; justify-content: space-between;">
+              <div><b>50%</b></div>
+              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+              
+            </div>  
+            <progressbar class="progressbar" [value]="50"></progressbar>
+       
+          </td>
+          <td><img src="" alt="pay img" class="tableimg"></td>
+          <td>
+            <div>Last login</div>
+            <div><b>10 Sec ago</b></div>
+          </td>
+        </tr>
+        <tr>
+          <td><img src="" alt="profile" class="tableimg"></td>
+          <td><div>Username</div>
+            <div>new|Registered</div>
+          </td>
+          <td><img src="" alt="flag" class="tableimg"></td>
+          <td>
+            <div style="display: flex; justify-content: space-between;">
+              <div><b>50%</b></div>
+              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+            </div>
+            <progressbar class="progressbar" [value]="50"></progressbar>
+           </td>
+          <td><img src="" alt="pay img" class="tableimg"></td>
+          <td>
+            <div>Last login</div>
+            <div><b>10 Sec ago</b></div>
+          </td>
+        </tr>
+       
+      </tbody>
+    </table>
 
 </mat-drawer-container>
+
