--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!-- <app -->
 
 <!-- <router-outlet></router-outlet> -->
-<div style="background-color: #e4e5e6; position:fixed; width:100%">
+<div style="background-color: #e4e5e6; position:fixed; z-index:100; width:100%">
+  
+   
   <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; border-bottom: 1px solid black;">
     <div class="displayonsm">
       <button mat-button (click)="drawer.toggle()">
@@ -59,6 +61,7 @@
                <span class="ml-3">Messages</span></div>
               <div>42</div>
             </a>
+            
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item" style="display: flex; justify-content: space-between;">
               <div><i class="fa fa-tasks" aria-hidden="true"></i>
@@ -118,9 +121,8 @@
   </nav>
 
   </div> 
-   
-   
-  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; justify-content: space-between; position: fixed; width: 100%; top:54px;">
+  
+  <nav class="navbar navbar-expand-lg navbar-light header" style="background-color: white; display: flex; z-index:100; justify-content: space-between; position: fixed; width: 100%; top:54px;">
     <div> <ol class="breadcrumb" style="background-color: white; margin-bottom: 0px;">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
       <li class="breadcrumb-item active"><a href="#">Dashboard</a></li>
@@ -134,8 +136,8 @@
         <span class="ml-3">Settings</span></div>
     </div>
   </nav>
- <mat-drawer-container class="example-container" style="top:115px; z-index: -1;" autosize>
- <mat-drawer #drawer style="background-color:#2f353a; width:200px; position: fixed;" class="example-sidenav"  [mode]="mobileQuery.matches ? 'over' : 'side'" fixedTopGap="56">
+ <mat-drawer-container class="example-container" style="top:115px; z-index: 1;" autosize>
+ <mat-drawer #drawer style="background-color:#2f353a; top:116px; width:200px; position: fixed;" class="example-sidenav"  [mode]="mobileQuery.matches ? 'over' : 'side'" fixedTopGap="56">
 
     <p>Auto-resizing sidenav</p>
     <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
@@ -146,165 +148,11 @@
 
 
   <div class="example-sidenav-content container">
-    <table class="table table-hover" style="background-color: white; border: 1px soild #E4E7EA">
-      <thead style="background-color: #E4E7EA;">
-        <tr>
-          <th scope="col">Icon</th>
-          <th scope="col">User</th>
-          <th scope="col">Country</th>
-          <th scope="col">Usage</th>
-          <th scope="col">Payment method</th>
-          <th scope="col">Activity</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><img src="" alt="profile" class="tableimg"></td>
-          <td><div>Username</div>
-            <div>new|Registered</div>
-          </td>
-          <td><img src="" alt="flag" class="tableimg"></td>
-          <td>
-            <div style="display: flex; justify-content: space-between;">
-              <div><b>50%</b></div>
-              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-             
-            </div> 
-            <progressbar class="progressbar" [value]="50"></progressbar>
-       
-          </td>
-          <td><img src="" alt="pay img" class="tableimg"></td>
-          <td>
-            <div>Last login</div>
-            <div><b>10 Sec ago</b></div>
-          </td>
-        </tr>
-        <tr>
-          <td><img src="" alt="profile" class="tableimg"></td>
-          <td><div>Username</div>
-            <div>new|Registered</div>
-          </td>
-          <td><img src="" alt="flag" class="tableimg"></td>
-          <td>
-            <div style="display: flex; justify-content: space-between;">
-              <div><b>50%</b></div>
-              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-             
-            </div>  
-            <progressbar class="progressbar" [value]="50"></progressbar>
-       
-          </td>
-          <td><img src="" alt="pay img" class="tableimg"></td>
-          <td>
-            <div>Last login</div>
-            <div><b>10 Sec ago</b></div>
-          </td>
-        </tr>
-        <tr>
-          <td><img src="" alt="profile" class="tableimg"></td>
-          <td><div>Username</div>
-            <div>new|Registered</div>
-          </td>
-          <td><img src="" alt="flag" class="tableimg"></td>
-          <td>
-            <div style="display: flex; justify-content: space-between;">
-              <div><b>50%</b></div>
-              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-              
-            </div>  
-            <progressbar class="progressbar" [value]="50"></progressbar>
-       
-          </td>
-          <td><img src="" alt="pay img" class="tableimg"></td>
-          <td>
-            <div>Last login</div>
-            <div><b>10 Sec ago</b></div>
-          </td>
-        </tr>
-        <tr>
-          <td><img src="" alt="profile" class="tableimg"></td>
-          <td><div>Username</div>
-            <div>new|Registered</div>
-          </td>
-          <td><img src="" alt="flag" class="tableimg"></td>
-          <td>
-            <div style="display: flex; justify-content: space-between;">
-              <div><b>50%</b></div>
-              <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
-            </div>
-            <progressbar class="progressbar" [value]="50"></progressbar>
-           </td>
-          <td><img src="" alt="pay img" class="tableimg"></td>
-          <td>
-            <div>Last login</div>
-            <div><b>10 Sec ago</b></div>
-          </td>
-        </tr>
-       
-      </tbody>
-    </table>
-    <div class="container padding-0" style="border: gray solid 2px;">
-      <div style="height: 30px; background-color: lightgrey; color: black; font-weight: 100;">Traffic and Sales</div>
-      <div class="row">
-        <div class="col col-lg-6">
-          <label class="mt-4">Monday</label>
-          <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="60" color="accent" ></mat-progress-bar>
-  
-          <label>Tuesday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="20" color="accent"></mat-progress-bar>
-  
-          <label>Wednesday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="70" color="accent"></mat-progress-bar>
-  
-          <label>Thursday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="50" color="accent"></mat-progress-bar>
-  
-          <label>Friday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="80" color="accent"></mat-progress-bar>
-  
-          <label>Saturday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1" mode="determinate" value="90" color="accent"></mat-progress-bar>
-  
-          <label>Sunday</label>
-          <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
-          <mat-progress-bar class="mt-1 mb-4" mode="determinate" value="20" color="accent"></mat-progress-bar>
-  
-        </div>
-        <div class="col col-lg-6 mt-5">
-           <label><i class="fa fa-male mt-4" aria-hidden="true"></i>
-            Male</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-           <label class="mt-3"><i class="fa fa-female" aria-hidden="true"></i>
-            Female</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-           <label class="mt-5"><i class="fa fa-globe" aria-hidden="true"></i>
-            Organic Search</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-           <label class="mt-3"><i class="fa fa-facebook" aria-hidden="true"></i>
-            Facebook</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-           <label class="mt-2"><i class="fa fa-twitter" aria-hidden="true"></i>
-            Twitter</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-           <label class="mt-2"><i class="fa fa-linkedin" aria-hidden="true"></i>
-            LinkedIn</label>
-           <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
-  
-        </div>
-      </div>
+   <app-main></app-main>
     </div>
+    
+    </mat-drawer-container>
+     
+    
 
-     </div>
-</mat-drawer-container>
 
