--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,165 @@
-<p>main works!</p>
+<div style="width:100%; height:400px; overflow: auto;">
+    <!-- <div style="width:30px; height:30px; overflow:auto;">
+        vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
+        </div> -->
+    <table class="table table-hover" style="width:1050px; background-color: white; border: 1px soild #E4E7EA;">
+        <thead style="background-color: #E4E7EA;">
+          <tr>
+            <th scope="col">Icon</th>
+            <th scope="col">User</th>
+            <th scope="col">Country</th>
+            <th scope="col">Usage</th>
+            <th scope="col">Payment method</th>
+            <th scope="col">Activity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><img src="" alt="profile" class="tableimg"></td>
+            <td><div>Username</div>
+              <div>new|Registered</div>
+            </td>
+            <td><img src="" alt="flag" class="tableimg"></td>
+            <td>
+              <div style="display: flex; justify-content: space-between;">
+                <div><b>50%</b></div>
+                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+               
+              </div> 
+              <progressbar class="progressbar" [value]="50"></progressbar>
+         
+            </td>
+            <td><img src="" alt="pay img" class="tableimg"></td>
+            <td>
+              <div>Last login</div>
+              <div><b>10 Sec ago</b></div>
+            </td>
+          </tr>
+          <tr>
+            <td><img src="" alt="profile" class="tableimg"></td>
+            <td><div>Username</div>
+              <div>new|Registered</div>
+            </td>
+            <td><img src="" alt="flag" class="tableimg"></td>
+            <td>
+              <div style="display: flex; justify-content: space-between;">
+                <div><b>50%</b></div>
+                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+               
+              </div>  
+              <progressbar class="progressbar" [value]="50"></progressbar>
+         
+            </td>
+            <td><img src="" alt="pay img" class="tableimg"></td>
+            <td>
+              <div>Last login</div>
+              <div><b>10 Sec ago</b></div>
+            </td>
+          </tr>
+          <tr>
+            <td><img src="" alt="profile" class="tableimg"></td>
+            <td><div>Username</div>
+              <div>new|Registered</div>
+            </td>
+            <td><img src="" alt="flag" class="tableimg"></td>
+            <td>
+              <div style="display: flex; justify-content: space-between;">
+                <div><b>50%</b></div>
+                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+                
+              </div>  
+              <progressbar class="progressbar" [value]="50"></progressbar>
+         
+            </td>
+            <td><img src="" alt="pay img" class="tableimg"></td>
+            <td>
+              <div>Last login</div>
+              <div><b>10 Sec ago</b></div>
+            </td>
+          </tr>
+          <tr>
+            <td><img src="" alt="profile" class="tableimg"></td>
+            <td><div>Username</div>
+              <div>new|Registered</div>
+            </td>
+            <td><img src="" alt="flag" class="tableimg"></td>
+            <td>
+              <div style="display: flex; justify-content: space-between;">
+                <div><b>50%</b></div>
+                <div><small>Jun 11, 2015 - Jul 10, 2015</small></div>
+              </div>
+              <progressbar class="progressbar" [value]="50"></progressbar>
+             </td>
+            <td><img src="" alt="pay img" class="tableimg"></td>
+            <td>
+              <div>Last login</div>
+              <div><b>10 Sec ago</b></div>
+            </td>
+          </tr>
+         
+        </tbody>
+      </table>
+</div>
+
+
+  <div class="container padding-0" style="border: gray solid 2px;">
+    <div style="height: 30px; background-color: lightgrey; color: black; font-weight: 100;">Traffic and Sales</div>
+    <div class="row">
+      <div class="col col-lg-6">
+        <label class="mt-4">Monday</label>
+        <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="60" color="accent" ></mat-progress-bar>
+
+        <label>Tuesday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="20" color="accent"></mat-progress-bar>
+
+        <label>Wednesday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="70" color="accent"></mat-progress-bar>
+
+        <label>Thursday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="50" color="accent"></mat-progress-bar>
+
+        <label>Friday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="80" color="accent"></mat-progress-bar>
+
+        <label>Saturday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1" mode="determinate" value="90" color="accent"></mat-progress-bar>
+
+        <label>Sunday</label>
+        <mat-progress-bar class="mt-3" mode="determinate" value="40"></mat-progress-bar>
+        <mat-progress-bar class="mt-1 mb-4" mode="determinate" value="20" color="accent"></mat-progress-bar>
+
+      </div>
+      <div class="col col-lg-6 mt-5">
+         <label><i class="fa fa-male mt-4" aria-hidden="true"></i>
+          Male</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+         <label class="mt-3"><i class="fa fa-female" aria-hidden="true"></i>
+          Female</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+         <label class="mt-5"><i class="fa fa-globe" aria-hidden="true"></i>
+          Organic Search</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+         <label class="mt-3"><i class="fa fa-facebook" aria-hidden="true"></i>
+          Facebook</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+         <label class="mt-2"><i class="fa fa-twitter" aria-hidden="true"></i>
+          Twitter</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+         <label class="mt-2"><i class="fa fa-linkedin" aria-hidden="true"></i>
+          LinkedIn</label>
+         <mat-progress-bar class="mt-1" mode="determinate" value="40"></mat-progress-bar>
+
+      </div>
+    </div>
+  </div>
