--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,7 @@
 
 
 <app-chartcomponent></app-chartcomponent>
+<app-brandcard></app-brandcard>
 <div style="width:100%; height:400px; overflow: auto; display: flex; justify-content: center;">
     <!-- <div style="width:30px; height:30px; overflow:auto;">
         vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
