--- a/src/app/components/brandcard/brandcard.component.html
+++ b/src/app/components/brandcard/brandcard.component.html
@@ -4,7 +4,7 @@
         <div class="card mb-3" style="max-width: 18rem;">
             <div class="card-header" style="height:100px; display: flex; justify-content: center; align-items: center; background-color: #4267B2;">
               <div>
-                fb icon
+                <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
               </div>
             </div>
             <div class="card-body pd-3">
@@ -36,7 +36,7 @@
         <div class="card mb-3" style="max-width: 18rem;">
             <div class="card-header" style="height:100px; display: flex; justify-content: center; align-items: center; background-color:#00acee">
               <div>
-                twitter icon
+                <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
               </div>
             </div>
             <div class="card-body pd-3">
@@ -68,7 +68,7 @@
         <div class="card mb-3" style="max-width: 18rem;">
             <div class="card-header" style="height:100px; display: flex; justify-content: center; align-items: center; background-color: #0e76a8;">
               <div>
-                LinkedIn Icon
+                <i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
               </div>
             </div>
             <div class="card-body pd-3">
@@ -100,7 +100,7 @@
         <div class="card mb-3" style="max-width: 18rem;">
             <div class="card-header" style="height:100px; display: flex; justify-content: center; align-items: center; background-color: yellow;">
               <div>
-                Google 
+                <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i>
               </div>
             </div>
             <div class="card-body pd-3">
