--- a/src/app/components/chartcomponent/chartcomponent.component.html
+++ b/src/app/components/chartcomponent/chartcomponent.component.html
@@ -8,7 +8,7 @@
               <div>members online</div>
             </div>
             
-            <div>icon</div>
+            <div><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i></div>
           </div>
           <div class="card-body">
             <canvas baseChart width="400" height="400"
@@ -34,7 +34,8 @@
             <div>members online</div>
           </div>
           
-          <div>icon</div>
+          <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i>
+          </div>
         </div>
         <div class="card-body">
             <canvas baseChart width="400" height="400"
@@ -60,7 +61,7 @@
           <div>members online</div>
         </div>
         
-        <div>icon</div>
+        <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i></div>
       </div>
       <div class="card-body">
         <canvas baseChart width="400" height="400"
@@ -86,7 +87,8 @@
           <div>members online</div>
         </div>
         
-        <div>icon</div>
+        <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i>
+        </div>
       </div>
       <div class="card-body">
         <canvas baseChart width="400" height="400"
