--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,15 +31,16 @@
     <div>
       <ul class="navbar-nav" style="display: inline-block;">
         <li class="nav-item displayonlg">
-          <a class="nav-link" href="#"><i class="fa fa-bell" aria-hidden="true"></i>
+          <a class="nav-link" href="#"><i class="fa fa-bell mr-2" aria-hidden="true"></i>
             <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item displayonlg">
-          <a class="nav-link" href="#"><i class="fa fa-tasks" aria-hidden="true"></i>
+          <a class="nav-link" href="#"><i class="fa fa-tasks mr-2" aria-hidden="true"></i>
           </a>
         </li>
         <li class="nav-item displayonlg">
-          <a class="nav-link" href="#">icon3</a>
+          <a class="nav-link" href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>
+           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="" alt="profile" style="width:100px;height:100px;border-radius: 20px;"></a>
@@ -128,7 +129,7 @@
       <div><i class="fa fa-commenting-o" aria-hidden="true"></i>
         <span></span></div>
       <div><i class="fa fa-line-chart" aria-hidden="true"></i>
-        <span class="ml-3">Dashboard icon</span></div>
+        <span class="ml-3">Dashboard</span></div>
       <div><i class="fa fa-cog" aria-hidden="true"></i>
         <span class="ml-3">Settings</span></div>
     </div>
