--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -10,7 +10,8 @@
           <table class="table table-hover" style="width:1050px; background-color: white; border: 1px soild #E4E7EA;">
             <thead style="background-color: #E4E7EA;">
               <tr>
-                <th scope="col">Icon</th>
+                <th scope="col"><i class="fa fa-user fa-2x ml-2" aria-hidden="true"></i>
+                </th>
                 <th scope="col">User</th>
                 <th scope="col">Country</th>
                 <th scope="col">Usage</th>
@@ -20,11 +21,11 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="" alt="flag" class="tableimg"></td>
+                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -34,18 +35,19 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td><i class="fa fa-cc-stripe fa-2x ml-3" aria-hidden="true"></i>
+                </td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="" alt="flag" class="tableimg"></td>
+                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -55,18 +57,19 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td><i class="fa fa-paypal fa-2x ml-3" aria-hidden="true"></i>
+                </td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="" alt="flag" class="tableimg"></td>
+                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -76,18 +79,19 @@
                   <progressbar class="progressbar" [value]="50"></progressbar>
              
                 </td>
-                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td><i class="fa fa-cc-visa fa-2x ml-3" aria-hidden="true"></i>
+                </td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
                 </td>
               </tr>
               <tr>
-                <td><img src="" alt="profile" class="tableimg"></td>
+                <td><img src="../../assets/profile.png" alt="profile" style="height: 40px;width: 40px;" class="tableimg img-fluid"></td>
                 <td><div>Username</div>
                   <div>new|Registered</div>
                 </td>
-                <td><img src="" alt="flag" class="tableimg"></td>
+                <td><img src="../../assets/flag.png" style="height: 20px;width: 35px;" alt="flag" class="tableimg mt-2"></td>
                 <td>
                   <div style="display: flex; justify-content: space-between;">
                     <div><b>50%</b></div>
@@ -95,7 +99,8 @@
                   </div>
                   <progressbar class="progressbar" [value]="50"></progressbar>
                  </td>
-                <td><img src="" alt="pay img" class="tableimg"></td>
+                <td><i class="fa fa-cc-mastercard fa-2x ml-3" aria-hidden="true"></i>
+                </td>
                 <td>
                   <div>Last login</div>
                   <div><b>10 Sec ago</b></div>
