--- a/src/app/components/chartcomponent/chartcomponent.component.html
+++ b/src/app/components/chartcomponent/chartcomponent.component.html
@@ -34,8 +34,19 @@
             <div>members online</div>
           </div>
           
-          <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i>
-          </div>
+          <div>
+            
+                <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-cog fa-2x" style="color: white;" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" style="color: white;" aria-hidden="true"></i>
+       
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            
+        </div>
         </div>
         <div class="card-body">
             <canvas baseChart width="400" height="400"
@@ -50,7 +61,8 @@
             <!-- <h5 class="card-title">Primary card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
           </div>
-      </div>
+      
+    </div>
     </div>
   
   <div class="col-12 col-md-6 col-lg-3">
@@ -61,8 +73,18 @@
           <div>members online</div>
         </div>
         
-        <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i></div>
-      </div>
+        <div>
+             <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-cog fa-2x" style="color: white;" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" style="color: white;" aria-hidden="true"></i>
+
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+     </div>
+     </div>
       <div class="card-body">
         <canvas baseChart width="400" height="400"
         [datasets]="lineChartData"
@@ -76,7 +98,8 @@
         <!-- <h5 class="card-title">Primary card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
       </div>
-    </div>
+    
+  </div>
   </div>
   
   <div class="col-12 col-md-6 col-lg-3">
@@ -87,9 +110,17 @@
           <div>members online</div>
         </div>
         
-        <div><i class="fa fa-cog fa-2x" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" aria-hidden="true"></i>
-        </div>
+        <div> <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-cog fa-2x" style="color: white;" aria-hidden="true"></i><i class="fa fa-caret-down fa-2x ml-1" style="color: white;" aria-hidden="true"></i>
+
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div> 
       </div>
+    </div>
       <div class="card-body">
         <canvas baseChart width="400" height="400"
         [datasets]="lineChartData"
@@ -102,7 +133,9 @@
         <!-- <h5 class="card-title">Primary card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
       </div>
-  </div>
+ 
   
   </div>
   </div>
+</div>
+</div>
