--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -8,6 +8,11 @@
     border-color: #c8ced3;
     border-radius: 5px;
 }
+.tableimg
+{
+    height:40px;
+    width:40px;
+}
 @media (min-width: 0px) and (max-width: 767px)  {
 .display-lg
 {
