'my_first_push'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
 <!-- <app -->
 
 <!-- <router-outlet></router-outlet> -->
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
+<!-- <app-logincomponent></app-logincomponent> -->
+<!-- <app-netflex></app-netflex> -->
+<!-- <app-salesforcedata></app-salesforcedata> -->
+<!-- <app-dailynickel></app-dailynickel> -->
+<!-- <app-productdetails></app-productdetails> -->
+<!-- <app-searchresult></app-searchresult> -->
+<!-- <app-location-search></app-location-search> -->
+<!-- <app-userregistration></app-userregistration> -->
+
+
+<!-- <app-communityprofile></app-communityprofile> -->
+<!-- <app-meetnow></app-meetnow> -->
+
+<router-outlet></router-outlet>
+<!-- <app-requestedmeeting></app-requestedmeeting> -->
